[gd_scene load_steps=9 format=4 uid="uid://kw2k2fagdyi6"]

[ext_resource type="Script" uid="uid://caqyucsors2rj" path="res://Scripts/Enviorment/phone.gd" id="1_vuj8m"]
[ext_resource type="Texture2D" uid="uid://cugi8n8twt6wq" path="res://Models/Pack2/Objects_Interior(Village)_Alpha/Textures/Phone_01.png" id="2_xiias"]
[ext_resource type="AudioStream" uid="uid://dkb2gwpf4nv4m" path="res://Audio/SFX/Enviro/PhoneRing.mp3" id="3_v1u80"]
[ext_resource type="AudioStream" uid="uid://bl01o0nr6vg4y" path="res://Audio/SFX/Enviro/phone_voice.mp3" id="4_bfmhd"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b0rnj"]
resource_name = "Phone_01"
transparency = 4
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("2_xiias")
emission_enabled = true

[sub_resource type="ArrayMesh" id="ArrayMesh_l7r8m"]
_surfaces = [{
"aabb": AABB(-0.00593344, -0.00362053, -0.00171231, 0.0109992, 0.00683653, 0.0041),
"format": 34359742465,
"index_count": 708,
"index_data": PackedByteArray("AAABAAIAAwABAAAAAgABAAMAAAAFAAMABAADAAUAAwAEAAIASAAFAAAABQBIAAQAAABJAEgAAgBJAAAACwBIAEkASQAJAAsABgAJAEkACwAJAAYASQACAAYASAALAAoACgAEAEgABgAKAAsACAAEAAoABwAGAAIABwACAAQABAAIAAcACgAGAAcABwAIAAoADAANAA4ADwANAAwADgANAA8ADAAQAA8ADgARAAwAEwAPABAADwATAA4AEAAUABMAEQAOAEoAEQBKABIAFQAOABMADgAVAEoAFgATABQAEwAWABUASgAZABIASgAVABgASgAYABkAGAAVABYASwAWABQASwAUABcAHABLABcASwAaABYAFgAaABgAHAAbAEsAGwAaAEsAHgAbABwAHAAfAB4AGgAbAB0AHQAYABoAHQAbAB4AGAAdABkAHgAgAB0AGQAdACAAIAAhABkAIgAjACQAJAAjACUAJQAjACIAJQAmACQAJAAnACIAJgAlACgAIgAoACUAKAApACYAKgAiACcAKAAiACoATAAqACcATAAnACsAKgAsACgALAApACgATAArAC4ALABNACkATQAwACkAKgBMAC0ALAAqAC0ALQBMAC4ALwBNACwALQAvACwALwAwAE0ALQAuADEALwAtADEAMgAxAC4ALgAzADIAMQAyADQAMQA1AC8ALwA1ADAANAA1ADEANQA2ADAANgA1ADQANAA3ADYATgA4AE8AOABOAFAAUABRADgAOABRAFIAUgBPADgAPQBRAFAAUgBRAD0AUABOADoATwBTAE4AOgBOAFMAUwBUADoAVQBTAE8AOQBUAFMAUwBVADkAVgBUADkAOgBUAFYAOQBVAFcATwA7AFUAVwBVADsAOwBPAFIAUgBYADsAOwBYAFcAPABYAFIAVwBYADwAUgBZADwAPQBZAFIAPABZAFoAWgBZAD0AWgA+ADwAPAA+AFcAPQA/AFoAUAA/AD0AVwBbADkAWwBXAD4AOQBbAFYAPgBaAFwAXABaAD8APgBdAFsAVgBbAF0AXABeAD4APgBeAF8AXwBdAD4AXQBgAFYAYABdAF8AVgBgAGEAYQBiAFYAVgBiADoAOgBiAFAAPwBQAGIAYgBhAD8AYwBhAGAAPwBhAGMAYABkAGMAXwBkAGAAYwBlAD8APwBlAFwAZgBjAGQAZQBjAGYAZwBkAF8AZABnAGYAXABlAGgAZgBoAGUAaABpAFwAQQBoAGYAaQBoAEEAZgBnAGoAXABpAGsAawBeAFwAXwBeAGsAXwBsAGcAawBsAF8AagBnAGwAQgBrAGkAbABrAEIAbABtAGoAQgBtAGwAagBuAGYAZgBuAEEAbwBqAG0AbgBqAG8AcABtAEIAbQBwAG8AQgBxAHAAaQByAEIAQQByAGkARwBCAHIAcQBCAEcAcgBzAEcAcgBBAEUARQBzAHIAQQBuAHQAbwB0AG4ARQBBAHUAdAB1AEEAdgBzAEUARwBzAHYAdQB3AEUARQB3AHYAdQB0AEMAQwB0AG8AQwB4AHUARAB3AHUAdQB4AEQAdgB3AEQAdgB5AEcARwB5AHEARAB6AHYARAB4AHsAewB6AEQAewB4AEMAdgB6AEYARgB5AHYARgB6AHsAcQB5AEYAQwB8AHsAbwB8AEMAewB9AEYARgB9AHEAewB8AEAAQAB8AG8AQAB9AHsAcQB9AEAAbwBwAEAAQABwAHEAfgB/AIAAgAB/AH4AfgCBAIAAgACBAH4AfwCAAIIAggCAAH8AggCDAH8AfwCDAIIAhACCAIMAgwCCAIQAhACFAIMAgwCFAIQAhACFAIYAhgCFAIQAhgCHAIQAhACHAIYAiACHAIYAhgCHAIgAhgCJAIgAiACJAIYA"),
"lods": [0.0011122, PackedByteArray("AAABAAIAAgABAAMAAwABAAAAAwAEAAIAAAAFAAMABAADAAUAAAACAAYABwACAAQABwAGAAIABAAIAAcABgAJAAAACAAEAAoABwAIAAoACgAEAAUACgAGAAcAAAAJAAsACwAFAAAACwAJAAYABQALAAoABgAKAAsADAANAA4ADwANAAwADgANAA8ADAAQAA8ADgARAAwAEQAOABIAEwAPABAADwATAA4AEAAUABMADgAVABIAFQAOABMAFgATABQAEwAWABUAFwAWABQAEgAVABgAGAAVABYAEgAYABkAFwAaABYAFgAaABgAGwAaABcAHAAbABcAHQAYABoAGAAdABkAGgAbAB0AHgAbABwAHQAbAB4AHAAfAB4AHgAgAB0AGQAdACAAIAAhABkAIgAjACQAJAAjACUAJQAjACIAJQAmACQAJAAnACIAJgAlACgAIgAoACUAKAApACYAKgAiACcAKAAiACoAKwAqACcALAApACgAKgAsACgAKgArAC0ALAAqAC0ALQArAC4ALAAvACkALQAvACwALwAwACkALQAuADEALwAtADEAMgAxAC4ALgAzADIAMQAyADQAMQA1AC8ALwA1ADAANAA1ADEANQA2ADAANgA1ADQANAA3ADYAOAA5ADoAOAA7ADkAOQA7ADwAOwA4AD0APAA7AD0APAA+ADkAPgA8AD0APwA9ADgAPQA/AD4AOAA6AD8AQAA5AD4AQAA6ADkAQQA+AD8AOgBBAD8AQgA+AEEAQAA+AEIAQQA6AEMAQwA6AEAAQwBAAEQAQwBFAEEAQgBBAEUARQBDAEQARABAAEYARgBAAEIARQBEAEYAQgBHAEYARwBFAEYAQgBFAEcA")],
"name": "Phone_01",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 138,
"vertex_data": PackedByteArray("Dl4kuwPO5jq9b+C6Dl4kuwPO5jpfWoC5Dl4ku+zxpDdfWoC57dZKOwPO5jpfWoC57dZKO+zxpDdfWoC57dZKOwPO5jq9b+C6mLQAu1hGbbtcDGa6mtnOuho167mPT9o6rOUNOxo167mPT9o6mLQAu1hGbbu9b+C6dy0nO1hGbbtcDGa6dy0nO1hGbbu9b+C6dBbeOlx8vjrd2oG6dBbeOlIk6DroCtU6dBbeOpTguDroCtU6XQQSO1Ik6DroCtU6XQQSO1x8vjrd2oG6dBbeOlEskDrd2oG6dBbeOpbjHjrd2oG6XQQSO5TguDroCtU6XQQSO1EskDrd2oG6dBbeOtuufDpYDYw6XQQSO9uufDpYDYw6XQQSO5bjHjrd2oG6dBbeOs2Q1zmMkpA6dBbeOjN06zjd2oG6XQQSO82Q1zmMkpA6XQQSOzN06zjoCtU6XQQSOzN06zjd2oG6dBbeOjN06zjoCtU6L4gKO3xUBrpqncY6XQQSOxENyLnd2oG6Rj/TOnxUBrpqncY6dBbeOhENyLnd2oG6sySRupTguDroCtU6sySRulQk6DroCtU6sySRulx8vjrd2oG6+BbXulQk6DroCtU6+BbXulx8vjrd2oG6sySRulMskDrd2oG6+BbXupTguDroCtU6+BbXulMskDrd2oG6sySRutuufDpYDYw6sySRupfjHjrd2oG6+BbXutuufDpYDYw6sySRutKQ1zmMkpA6sySRukN06zjd2oG6+BbXutKQ1zmMkpA6+BbXupfjHjrd2oG6sySRukN06zjoCtU6hU2GunpUBrpqncY6sySRug4NyLnd2oG6nR7IunpUBrpqncY6+BbXukN06zjoCtU6+BbXukN06zjd2oG6+BbXug4NyLnd2oG66OqDu1Jdlzjsadk3UyWDuw1xvzr0Ab86UyWDux/FjbX0Ab866OqDu5TXtTrsadk3OyQbuw3/tDqUfns5OyQbuynmpDiUfns5/EURu+EWpzqyY5c6/EURu2y0QTmyY5c6w2GWOw1xvzr0Ab862743O2y0QTmyY5c62743O+EWpzqyY5c6w2GWOx/FjbX0Ab86fjKbO2ZdlziUfKI55cxIO0jmpDiSfKI5fjKbO5LXtTqUfKI55cxIOwr/tDqSfKI57dZKO5w7o7m9b+C6Dl4ku5w7o7m9b+C6dBbeOpbjHjp42SK6XQQSO5bjHjp42SK6sySRupfjHjp42SK6+BbXupfjHjp42SK6ZfKKuyncCjXSE1E6lKqLu2pNPzrNzJm28kVVu2afV7nSE1E6DptNu4977rg9WRM5DZtNu3dNPzo9WRM5gcKSu29NPzrSE1E6b/WKu59NPzrpHOA6ZfKKuw08vzrSE1E67htVu7dNPzpxJwQ78kVVu2RB2jrSE1E6DZtNuzE1zjo9WRM5OyQbu29NPzqUfns5Vlscu29NPzqIKIY67htVu1+F2jrpHOA6zZNEum9NPzoBh6I6LeAgu30+pzr6g/I6TVIzugbkmzoDwrM6ZtZIun0+pzqZXQg7LeAgu5RNPzr6Wg07LeAgu7N4QDn6g/I67htVuz29WbnpHOA6ZNZIurN4QDmZXQg7bFxIupRNPzq/ehw7UlIzuqaljTkDwrM671yxOrN4QDmZXQg78x+xOpRNPzq/ehw75pqmOqaljTkDwrM6pTuvOm9NPzoBh6I6DFlHO5RNPzr6Wg075JqmOgbkmzoDwrM68lyxOn0+pzqZXQg7DFlHO30+pzr6g/I6DFlHO7N4QDn6g/I6zZR7O7dNPzpxJwQ7zZR7O1+F2jrpHOA60b57O2RB2jrSE1E6NNRCO29NPzqIKIY65cxIO29NPzqSfKI5zZR7Oz29WbnpHOA60b57O2afV7nSE1E6vK57O3dNPzqSfKI5vK57O2Z77riSfKI51C6eOyncCjXSE1E6vK57Oy41zjqSfKI5mgKjO29NPzqSfKI58f6lO29NPzrSE1E63jGeO59NPzrpHOA61C6eOw08vzrSE1E6LCqNuzCvkTocTF86t6GvuxMREDv7aF45TG3Cu6Y6BDtxVbs3LCqNuzvD0TkcTF86icW5u6W1UjsABCK66J2ku26ZUjuxHAu6XC2wu3rNOTuJNqC6FQigu6HDUjva9pe6VAeWu3bW1TqyX6e6REChu1kchDqyX6e6OzQXuzvD0TmyX6e6OzQXuzCvkTqyX6e6")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_stj8f"]
resource_name = "Phone_01"
_surfaces = [{
"aabb": AABB(-0.00593344, -0.00362053, -0.00171231, 0.0109992, 0.00683653, 0.0041),
"attribute_data": PackedByteArray("88ICP4DNwD55R9s+gM3APnlH2z4s7fI+Zn7tPmLbLT8+SaQ+DjQAP/TCAj9h2y0/dElNP2TjID50SU0/xrzxPqpoYj/GvPE+qmhiP2TjID58R9s+NgtKP3xH2z5g+zA/9MICP2D7MD9ofu0+AHB+P0BJpD6tyFA/9cICPwBwfj92R10/AHB+P6A3RD8AcH4/oDdEP3fKLT92R10/dsotPy/W4j4wWuI9MNbiPoaNuj6uzso+ho26Pq3Oyj4wWuI9QADIO/qadj9DCZ4+AHB+P0IJnj52yi0/wP/HO36fNT/z4gU/BvjWPhBiIT/GvPE+EGIhP2TjID7z4gU/5GxWPq9g/T0eHSU/r2D9Pah43j7Tppo+9l3TPtOmmj52qio/f9lHP9ToBD+fN0Q/eKoqP+RnST9HiSo/A+9MP0/IBD8SClQ/3JoEP6ihTz/wXCI/4phXPxipIj8fJVs/Z20EP+cVXD/KESo/LkBiP1vqKT8uQGI/9D8EP8dy+D50fV4+LRbpPnR9Xj4tFuk+hI26Psdy+D6Ejbo+nopCP+g4dT5XYDw/qNZ1PpBvOz8wir49nopCP5gevT2CVDQ/0PW/PVLjNz/cM1g+GOwvP0ADVz50OS0/eGHBPVSyKT+YtHc+8CMoP6Blwj0QgiQ/XDl4Pm2zaz/8Jrc+bbNrP5aDxj6oiGU/loPGPqiIZT/8Jrc+VrlqP2ZKmz6niGU/ZkqbPqeIZT/M7Ys+VrlqP8ztiz6Ofos+3I5KPo5+iz5cfyo+KNuaPlx/Kj4o25o+3I5KPsRy+D6AYrU9xHL4PgAI9T0qFuk+AAj1PSoW6T6AYrU9qYhlP8S88T53DW0/xLzxPncNbT8qYOI+qYhlPypg4j65l2U/0E5+P3RnYD8BcH4/VAlkP16uWD/YHmk/2Y1YP33Raz96InY/5jlwP2VgWD+3yHM/om52P/RUdz/xMlg/vEV4P1XXfT8CcH4/5a99PwJwfj99BVg/jX6LPizPgT6Ofos++B3NPinbmj74Hc0+KduaPizPgT4CcH4/YyVUPwJwfj/7ei4/9VR3P2+oLj+8RXg/00xUP+Y5cD/j1S4/t8hzPyDkTD/XHmk/VwMvP33Raz/4l0w/uZdlP07EVD9TCWQ/3CMvP3RnYD9/5VQ/p4hlP5TDzD5ss2s/lMPMPmyzaz8uINw+p4hlPy4g3D5WuWo/ZIqhPla5aj8A57A+qIhlPwDnsD6oiGU/ZIqhPijbmj5YHnc+jn6LPlwedz6Ofos+2A5XPijbmj7YDlc+jn6LPkBZ/D0o25o+QFn8PSjbmj5c/x0+jn6LPmD/HT6Ofos+4OalPY5+iz5IWeM9KoiaPkhZ4z0qiJo+4OalPbvCrD0w3Ew9sP/HO1RuBT7RzLQ9rKEFPqibKjxgI0w9afZPPyzGBj5W5GI/KMYGPo7MYj/wJh09MA5QP/AmHT11sTE/6ihhP8XJPj+uwGM/oBdBPx22ez8tgyw/hLR6P7sIND8i8Bg/t4QwP8A4/j4EUEA/o5YVP6AXQT9IEPs+11gNP4S0ej9K7SE/HbZ7P2+fHz+uwGM/H4cSP+ooYT9hWhE/wDj+PmXeFD8i8Bg/Su0hP0gQ+z6uJSE/o5YVPy0W6T7AHw0+JbcBP/wDBz4mtwE/eP1RPi0W6T6w4Us+sieRPLBMLj7hlsw97jsnP9EnkTzuOyc/4ZbMPbBMLj5Gcj0+0OrePa9g/T2sP8g+RnI9Pqw/yD63YP090OrePQxmGz+AiRk9r6cIP4CJGT3TfRs/SKkGPuePCD9IqQY+K2BlP29JAT8HinE/3IASPwaKcT/8hP8+K2BlP+v5ED/SAmk/eKoqP9ACaT/aoBU/aIZ5P6GcKT9nhnk/ta4WP/PCAj9wdPw+9MICP9jOTj+lxEQ+AHB+P5/ERD52yi0/EyxUP+LrCT+EdjQ/CH7qPehbcD9ssV0/6FtwP+omND/RzLQ9EE2/PX4aQj2QeUU9tqlBPdAZvz0/KUE9kBIUPuDOzTuQ5r491eBwPTCygz4OVbc9MLKDPhZVtz04TrQ+tuBwPXyBWT67YOQ9fIFZPsbgcD2QkiA+s//HO3yBWT4bL+Y8MrKDPhsv5jw4TrQ+1eBwPZ5btD4bL+Y8/E/xPtXgcD2YQvE+FlW3PfxP8T7V4HA9AfYQPxsv5jwB9hA/FlW3PQH2ED+24HA9vG4cP7P/xzu8bhw/u2DkPbxuHD/G4HA9dqoqP+25Fj8BcH4/ny8XP75AcD9LsSA/TeBuP0QQCj+fym8/WmoIP61CZD/z4gU/atxLPwIhED/SAks/YwoRP5DiLj/s3wY/oF8tP3X6Cj9mMBU/pV4NP/nJCT+afho/pi0KP030Gj/E/Pc+W4IhP2JrCj+cmwM+TLJHPk4RHj4g6EM+UBEePqhxyz0Ihzg+TLJHPk4RHj5SBp4+nJsDPjohnD4Ihzg+PCGcPkwRHj74Hc0+9Vk2P75AcD9D5DU/AXB+P6HbPz9O4G4/mjopP5/Kbz+wlCc/rUJkP0kNJT9q3Es/WEsvP9ICSz9CCiY/oF8tP7k0MD+P4i4/yyQqP2YwFT/7iCw/+ckJP/CoOT+mLQo/saxAP2JrCj+jHjo/xPz3PmBtWT9sYxQ+X21ZP4g9pz10SU0/iD2nPUqRZT+IPac9X21ZP/AmHT0ltwE/tIAsPvXe7D60gCw+mYFyP6ukKj+YgXI/qyUgP2iGeT+rJSA/LGBlP6glID+YgXI/q6YVP8gqHj/IKqY93gYSP8gqpj3eBhI/bGMUPt4GEj+AiRk98+IFP8gqpj2PRGc/rCEJPweKcT+sIQk/pseCPj6etT7WNYI+SkqfPjSOTD6m/54+lCBKPqrNtT4M600+8JyJPtWMgj5Wb4o+sTiCPoDcRj4A64A+ENLuPTiYTj7gpvA95A9PPuBpRz7bmE0+vBd+PqbHgj4seX0+1YyCPlZvij4M600+8JyJPqbHgj4+nrU+lCBKPqrNtT40jkw+pv+ePtY1gj5KSp8+DOtNPvCciT7VjII+Vm+KPjiYTj7gpvA9AOuAPhDS7j2xOII+gNxGPuQPTz7gaUc+25hNPrwXfj6mx4I+LHl9PtWMgj5Wb4o+DOtNPvCciT4="),
"format": 34359742487,
"index_count": 708,
"index_data": PackedByteArray("AAABAAIAAgCwAAAAsAACAAMABAADAAIAAwAFALAABgAHAAgACAAJAAYACgALAAwADACxAAoADQAKALEADgAKAA0AsQAPAA0AsgAZABoAGgCzALIAGACyALMAswAbABgAEAARABIAEgATABAAFAAVABYAFgAXABQAHAAdAB4AHgAfABwAIAAhACIAIgAjACAAJAAlACYAJgAnACQAJwAmALQAJgApALQAJwC0ACgAtAApACoAtAArACgAtAAqACsAKgAsACsAKwAsAC0ALQAuACsALwAwADEAMQAyAC8AMwA0ADUANQA2ADMANQA0ALUANAA4ALUANQC1ADcAtQA4ADkAtQA6ADcAtQA5ADoAOQA7ADoAPAA6ADsAOwA9ADwAPgA/AEAAQABBAD4AQgBDAEQARABFAEIARgBHAEgASABJAEYASgBLAEwATABNAEoATgBPAFAAUABRAE4AUgBTAFQAVABVAFIAVgBSAFUAtgBWAFUAtgBVAFcAVgC2AFgAtgBXAFkAWAC2AFkAWABZAFoAWwBaAFkAWQBcAFsAXQBeAF8AXwBgAF0AYQBiAGMAYwBkAGEAZABjAGUAZgBkAGUAZgBlALcAZgC3AGgAtwBlAGcAaAC3AGcAaABnAGkAaQBnAGoAagBrAGkAbABtAG4AbgBvAGwAcABxAHIAcgBzAHAAdAB1AHYAdgB3AHQAeAB5AHoAegB7AHgAfAB9AH4AfgB/AHwAuACAALkAuQC6ALgAggC4ALoAugC7AIIAgQC7ALoAugC8AIEAvAC6ALkAuQCDALwAvQC+AL8AvgC9AMAAwADBAL4AnwDBAMAAwADCAJ8AnADCAMAAwADDAJwAxADDAMAAwAC9AMQAxQDEAL0AvQDGAMUAvwDGAL0AxwDFAMYAyADGAL8AxgDIAMcAvwDJAMgAxwDIAMoAygDIAMkAygDLAMcAyQDMAMoAywDKAM0AzQDKAMwAzQDOAMsAzADPAM0AngDOAM0AzQDPAJ0AzQDQAJ4AnQDQAM0AkADRANIA0gDRAJEAkQDTANIA0gDTAJIA0gDUAJAAkgCTANIA1ADSAJMAkwDVANQA1gDVAJMAkwDXANYA1gDXANgA2ADZANYA2QDYAJUAlQDaANkA2wDaAJUAlQDcANsAlADbANwA3ACVAJcA3ADdAJQAlwDeANwAlgDdANwA3ADeAJYAowDfAOAA4ADhAKMAoADhAOAA4ADiAKAA4wDgAN8A4gDgAOMA3wDkAOMA4wDlAOIA4wDkAKEAogDlAOMAoQDmAOMA4wDmAKIA5wDoAIsAigDoAOcA5wDpAIoAiQDpAOcAiwDqAOcA5wCIAIkAiADnAOoA6gDrAIgAiADrAOwA7ADtAIgA7QDsAO4A7gDvAO0AjADvAO4A7gDwAIwAjADwAPEA8QDyAIwAjgCMAPIA8gDxAI0A8gDzAI4AjQD0APIAjwDzAPIA8gD0AI8AhAD1APYA9gD1AIUA9gD3AIQAhQD4APYAhwD3APYA9gD4AIYA9gD5AIcAhgD5APYAmQD6APsA+wCYAJkA+wD6AJoAmgCbAPsArgD8AP0A/QD8AKwA/QD+AK4ArAD/AP0ArwD+AP0A/QD/AK0A/QAAAa8ArQAAAf0ApgABAQIBAgEBAaQAAgEDAaYApAAEAQIBpwADAQIBAgEEAaUAAgEFAacApQAFAQIBqgCoAAYBBgEHAaoAqQAHAQYBBgGrAKkACAEJAQoBCgELAQgBDAEKAQkBCQENAQwBDgEPARABEAERAQ4BDgERARIBEgETAQ4BFAETARIBEgEVARQBFgEXARgBGAEZARYBGQEYARoBGgEbARkBHAEdAR4BHgEfARwBIAEfAR4BHgEhASABIAEhASIBIgEjASAB"),
"lods": [0.0011122, PackedByteArray("AAABAAIAAAACAAMABAADAAIAAwAFAAAABgAHAAgACAAJAAYACgALAAwADQAKAAwADgAKAA0ADAAPAA0AEAARABIAEgATABAAFAAVABYAFgAXABQAGAAZABoAGgAbABgAHAAdAB4AHgAfABwAIAAhACIAIgAjACAAJAAlACYAJgAnACQAJwAmACgAJgApACgAKAApACoAKAAqACsAKgAsACsAKwAsAC0ALQAuACsALwAwADEAMQAyAC8AMwA0ADUANQA2ADMANQA0ADcANAA4ADcANwA4ADkANwA5ADoAOQA7ADoAPAA6ADsAOwA9ADwAPgA/AEAAQABBAD4AQgBDAEQARABFAEIARgBHAEgASABJAEYASgBLAEwATABNAEoATgBPAFAAUABRAE4AUgBTAFQAVABVAFIAVgBSAFUAVwBWAFUAVgBXAFgAWABXAFkAWABZAFoAWwBaAFkAWQBcAFsAXQBeAF8AXwBgAF0AYQBiAGMAYwBkAGEAZABjAGUAZgBkAGUAZgBlAGcAaABmAGcAaABnAGkAaQBnAGoAagBrAGkAbABtAG4AbgBvAGwAcABxAHIAcgBzAHAAdAB1AHYAdgB3AHQAeAB5AHoAegB7AHgAfAB9AH4AfgB/AHwAgACBAIIAgACDAIEAhACFAIYAhwCEAIYAiACJAIoAigCLAIgAiwCMAIgAjACLAI0AjQCOAIwAjgCNAI8AkACRAJIAkgCTAJAAlACQAJMAlACTAJUAlgCUAJUAlQCXAJYAmACZAJoAmgCbAJgAnACdAJ4AnwCdAJwAoAChAKIAowChAKAApAClAKYApQCnAKYAqACpAKoAqACrAKkArACtAK4ArgCtAK8A")],
"material": SubResource("StandardMaterial3D_b0rnj"),
"name": "Phone_01",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 292,
"vertex_data": PackedByteArray("Dl4kuwPO5jq9b+C6Dl4kuwPO5jpfWoC5Dl4ku+zxpDdfWoC5mLQAu1hGbbtcDGa6mtnOuho167mPT9o6mLQAu1hGbbu9b+C67dZKOwPO5jpfWoC5Dl4kuwPO5jpfWoC5Dl4kuwPO5jq9b+C67dZKOwPO5jq9b+C67dZKO+zxpDdfWoC57dZKOwPO5jpfWoC57dZKOwPO5jq9b+C6dy0nO1hGbbtcDGa6rOUNOxo167mPT9o6dy0nO1hGbbu9b+C6Dl4ku+zxpDdfWoC5Dl4kuwPO5jpfWoC57dZKOwPO5jpfWoC57dZKO+zxpDdfWoC5mLQAu1hGbbtcDGa6dy0nO1hGbbtcDGa6dy0nO1hGbbu9b+C6mLQAu1hGbbu9b+C6dy0nO1hGbbu9b+C67dZKOwPO5jq9b+C6Dl4kuwPO5jq9b+C6mLQAu1hGbbu9b+C6mtnOuho167mPT9o6Dl4ku+zxpDdfWoC57dZKO+zxpDdfWoC5rOUNOxo167mPT9o6mtnOuho167mPT9o6rOUNOxo167mPT9o6dy0nO1hGbbtcDGa6mLQAu1hGbbtcDGa6dBbeOlx8vjrd2oG6dBbeOlIk6DroCtU6dBbeOpTguDroCtU6dBbeOlEskDrd2oG6dBbeOpbjHjrd2oG6dBbeOtuufDpYDYw6dBbeOs2Q1zmMkpA6dBbeOjN06zjd2oG6dBbeOjN06zjoCtU6Rj/TOnxUBrpqncY6dBbeOhENyLnd2oG6XQQSO1Ik6DroCtU6dBbeOlIk6DroCtU6dBbeOlx8vjrd2oG6XQQSO1x8vjrd2oG6L4gKO3xUBrpqncY6XQQSOzN06zjoCtU6XQQSOzN06zjd2oG6XQQSOxENyLnd2oG6XQQSO5bjHjrd2oG6XQQSO82Q1zmMkpA6XQQSO9uufDpYDYw6XQQSO1EskDrd2oG6XQQSO5TguDroCtU6XQQSO1x8vjrd2oG6XQQSO1Ik6DroCtU6L4gKO3xUBrpqncY6Rj/TOnxUBrpqncY6dBbeOjN06zjoCtU6XQQSOzN06zjoCtU6dBbeOpTguDroCtU6dBbeOlIk6DroCtU6XQQSO1Ik6DroCtU6XQQSO5TguDroCtU6dBbeOtuufDpYDYw6dBbeOpTguDroCtU6XQQSO5TguDroCtU6XQQSO9uufDpYDYw6XQQSO9uufDpYDYw6XQQSO82Q1zmMkpA6dBbeOs2Q1zmMkpA6dBbeOtuufDpYDYw6dBbeOjN06zjoCtU6dBbeOs2Q1zmMkpA6XQQSO82Q1zmMkpA6XQQSOzN06zjoCtU6sySRupTguDroCtU6sySRulQk6DroCtU6sySRulx8vjrd2oG6sySRulMskDrd2oG6sySRutuufDpYDYw6sySRupfjHjrd2oG6sySRutKQ1zmMkpA6sySRukN06zjd2oG6sySRukN06zjoCtU6hU2GunpUBrpqncY6sySRug4NyLnd2oG6+BbXulQk6DroCtU6+BbXulx8vjrd2oG6sySRulx8vjrd2oG6sySRulQk6DroCtU6nR7IunpUBrpqncY6+BbXug4NyLnd2oG6+BbXukN06zjd2oG6+BbXukN06zjoCtU6+BbXupfjHjrd2oG6+BbXutKQ1zmMkpA6+BbXulMskDrd2oG6+BbXutuufDpYDYw6+BbXupTguDroCtU6+BbXulx8vjrd2oG6+BbXulQk6DroCtU6sySRukN06zjoCtU6hU2GunpUBrpqncY6nR7IunpUBrpqncY6+BbXukN06zjoCtU6sySRupTguDroCtU6+BbXupTguDroCtU6+BbXulQk6DroCtU6sySRulQk6DroCtU6sySRutuufDpYDYw6+BbXutuufDpYDYw6+BbXupTguDroCtU6sySRupTguDroCtU6+BbXutuufDpYDYw6sySRutuufDpYDYw6sySRutKQ1zmMkpA6+BbXutKQ1zmMkpA6sySRukN06zjoCtU6+BbXukN06zjoCtU6+BbXutKQ1zmMkpA6sySRutKQ1zmMkpA66OqDu1Jdlzjsadk3UyWDuw1xvzr0Ab86UyWDux/FjbX0Ab866OqDu5TXtTrsadk36OqDu5TXtTrsadk36OqDu1Jdlzjsadk3OyQbuynmpDiUfns5OyQbuw3/tDqUfns5/EURu2y0QTmyY5c6OyQbuynmpDiUfns56OqDu1Jdlzjsadk3UyWDux/FjbX0Ab862743O2y0QTmyY5c6w2GWOx/FjbX0Ab865cxIO0jmpDiSfKI5fjKbO2ZdlziUfKI5UyWDuw1xvzr0Ab866OqDu5TXtTrsadk3OyQbuw3/tDqUfns5/EURu+EWpzqyY5c6w2GWOw1xvzr0Ab862743O+EWpzqyY5c6fjKbO5LXtTqUfKI55cxIOwr/tDqSfKI5/EURu+EWpzqyY5c6OyQbuw3/tDqUfns5OyQbuynmpDiUfns5/EURu2y0QTmyY5c6w2GWOw1xvzr0Ab86UyWDux/FjbX0Ab86UyWDuw1xvzr0Ab86w2GWOx/FjbX0Ab862743O2y0QTmyY5c6/EURu+EWpzqyY5c6/EURu2y0QTmyY5c62743O+EWpzqyY5c65cxIOwr/tDqSfKI55cxIO0jmpDiSfKI5fjKbO5LXtTqUfKI5fjKbO2ZdlziUfKI52743O+EWpzqyY5c65cxIO0jmpDiSfKI55cxIOwr/tDqSfKI52743O2y0QTmyY5c6w2GWOx/FjbX0Ab86w2GWOw1xvzr0Ab86fjKbO2ZdlziUfKI5fjKbO5LXtTqUfKI5Dl4ku5w7o7m9b+C67dZKO5w7o7m9b+C67dZKO5w7o7m9b+C6Dl4ku5w7o7m9b+C6dBbeOpbjHjp42SK6XQQSO5bjHjp42SK6sySRupfjHjp42SK6+BbXupfjHjp42SK6ZfKKuyncCjXSE1E6lKqLu2pNPzrNzJm2gcKSu29NPzrSE1E6b/WKu59NPzrpHOA6ZfKKuw08vzrSE1E6DFlHO5RNPzr6Wg07DFlHO7N4QDn6g/I671yxOrN4QDmZXQg7zZR7O7dNPzpxJwQ7zZR7Oz29WbnpHOA63jGeO59NPzrpHOA6zZR7O1+F2jrpHOA6DFlHO30+pzr6g/I68lyxOn0+pzqZXQg78x+xOpRNPzq/ehw7ZtZIun0+pzqZXQg7bFxIupRNPzq/ehw7ZNZIurN4QDmZXQg7LeAgu5RNPzr6Wg07LeAgu30+pzr6g/I6LeAgu7N4QDn6g/I67htVu7dNPzpxJwQ77htVu1+F2jrpHOA67htVuz29WbnpHOA6b/WKu59NPzrpHOA6ZfKKuw08vzrSE1E68kVVu2RB2jrSE1E6DZtNuzE1zjo9WRM57htVu1+F2jrpHOA6LeAgu30+pzr6g/I6ZtZIun0+pzqZXQg7TVIzugbkmzoDwrM65JqmOgbkmzoDwrM68lyxOn0+pzqZXQg7DFlHO30+pzr6g/I6zZR7O1+F2jrpHOA60b57O2RB2jrSE1E61C6eOw08vzrSE1E6vK57Oy41zjqSfKI55JqmOgbkmzoDwrM6pTuvOm9NPzoBh6I6NNRCO29NPzqIKIY65pqmOqaljTkDwrM6zZNEum9NPzoBh6I6TVIzugbkmzoDwrM6UlIzuqaljTkDwrM6Vlscu29NPzqIKIY68kVVu2afV7nSE1E6ZfKKuyncCjXSE1E6DptNu4977rg9WRM57htVuz29WbnpHOA6LeAgu7N4QDn6g/I6ZNZIurN4QDmZXQg7UlIzuqaljTkDwrM671yxOrN4QDmZXQg75pqmOqaljTkDwrM6DFlHO7N4QDn6g/I6zZR7Oz29WbnpHOA60b57O2afV7nSE1E6vK57O2Z77riSfKI51C6eOyncCjXSE1E6lKqLu2pNPzrNzJm2DZtNu3dNPzo9WRM5DZtNuzE1zjo9WRM5DptNu4977rg9WRM5OyQbu29NPzqUfns5OyQbu29NPzqUfns5Vlscu29NPzqIKIY61C6eOyncCjXSE1E68f6lO29NPzrSE1E6mgKjO29NPzqSfKI53jGeO59NPzrpHOA61C6eOw08vzrSE1E6vK57Oy41zjqSfKI5vK57O3dNPzqSfKI5mgKjO29NPzqSfKI55cxIO29NPzqSfKI5vK57O2Z77riSfKI5NNRCO29NPzqIKIY65cxIO29NPzqSfKI5LCqNuzCvkTocTF86t6GvuxMREDv7aF45TG3Cu6Y6BDtxVbs3LCqNuzvD0TkcTF86icW5u6W1UjsABCK66J2ku26ZUjuxHAu6VAeWu3bW1TqyX6e6OzQXuzCvkTqyX6e6OzQXuzvD0TmyX6e6REChu1kchDqyX6e6XC2wu3rNOTuJNqC6FQigu6HDUjva9pe66J2ku26ZUjuxHAu6icW5u6W1UjsABCK6LCqNuzCvkTocTF86LCqNuzvD0TkcTF86TG3Cu6Y6BDtxVbs3t6GvuxMREDv7aF45icW5u6W1UjsABCK66J2ku26ZUjuxHAu6OzQXuzvD0TmyX6e6OzQXuzCvkTqyX6e6VAeWu3bW1TqyX6e6REChu1kchDqyX6e6XC2wu3rNOTuJNqC6FQigu6HDUjva9pe66J2ku26ZUjuxHAu6icW5u6W1UjsABCK6AAD/f/7//n8AAP9///8AAJwZh3QXAMMHU1RaRwsVmnOOX6pX1xesZKkTzm5wAJx+/3//////AAD/f/////8AAP9//////wAA/3//////AABi5od05/87+P///3//////////f/7/AICrq1pH8+pkjHCgqlcn6FKbVezObo7/YoH/f/9//38AgP9//3//fwCA/3//f/9/AID/f/9//38AgFNUWkeak7bMq6taR2Rstsz/fwAA/3//v/9/AAD/f/+///////9/AAD//////38AAP//////fwAA//////9/AAD/f8zmzOYAAP9/zObM5gAA/3/M5jIZAAD/f8zmMhkAAI5fqleGSMmAcKCqV3i3yYCrq1pHTi2riFNUWkew0quIAAD/f/9/cH4AAP9//39wfgAA/3//f3B+AAD/f/9/cH4AAP9//39wfgAA/3//f3B+AAD/f/9/cH6bBHqFZHsSfZgG1ocwbgl92QiFisNpHXzZCIWKLndAetyN//////8/3I3//////z/cjf//////P9yN//////8/6PEldHZnPoVs9Rp3WmwEhI/4vnm7ebyD6PEldCB0MIf+//9//3+Ogf///3//f46B/v//f/9/joH+//9//3+Ogf///3//f46B////f/9/joH///9//3+Ogf9/0mw0YGuH/3/SbNBheYb/f8+mDHD1mP9/3KuPbf2b/399VoGpAID/f/9//38AgP9//3//fwCA/399VoGpAID/f8FY////v/9/fVb///+//399Vv///7//f8FY////v/9/wVj///+//38Zsf///7//fxmx////v/9/wVj///+//3/Pps+mAAD/fxmxGbEAAP9/GbEZsQAA/3/cq9yrAAD///9//3+Ogf///3//f46B////f/9/joH+//9//3+Ogf7//3//f46B////f/9/joH+//9//3+OgWP7eoWahOyCZvnWh86R9YIl94WKO5bhgyX3hYrQiL6F3I3//////z/cjf//////P9yN//////8/3I3//////z8WDiV0iJjAehYOJXTei854bwe+eUOGQnySChp3pJP6ewAA/3//f3B+AAD/f/9/cH4AAP9//39wfgAA/3//f3B+AAD/f/9/cH4AAP9//39wfgAA/3//f3B+/3/PpvKP9Zj/f9JsLp55hv9/0mzKn2uH/3/cq2+S/Zv/f31WgakAgP9/fVaBqQCA/3//f/9/AID/f/9//38AgP9/wVj+//+//3/BWP7//7//f31W/v//v/9/fVb///+//3/BWP7//7//f8FY////v/9/GbH+//+//38Zsf7//7//f8+mz6YAAP9/3KvcqwAA/38ZsRmxAAD/fxmxGbEAAHc7gzEYvpJbgFa/sx5Kz1uAVj9MZcgzZXc7e84INxdh//+fDv9//n///1/x/3/+f///X/H/f/5///9f8f9//n9XmBsY+/5r/hyfUh8A/wn+dzuDMUrpPPuAVj9MhiEliq5m0hdX/4/9fqk/TDLiQ4xdXKYe+frp/WXEFDN1Gqr+gFa/s4YhJgp3O3vOSuk9exyfrOAA/wp+V5ji5/v+a35+qb+zMuJDDK5mLOhX/5B9ZcTqzHUaq35dXFjh+frpfSHyGWmdARmFIfIZaVMA9voh8uWWUwAHhSHy5ZadAeX6fqm/s0WXYaWAVj9Mwsqii4BWv7O5aGGlfqk/TDw1oospCNYzT3t0da7qqvL2l+B/rupUDcB/BHQpCCjMFpWnff//////fwAAAAD///9/AAD//////38AAP//AAD/fwAAKQgozGn6dF37Ch2hy//rc/sK4V7L/xMMKQjWM2n6iiJ+qT9M3u5zk36pv7Pe7ovsZcQUM7cFAfNlxOrMtwX9jPELjXUMANEADfSNdfL/Lf///////38AAP//////fwAAAAD/f/9/cH7+//9//3+Ogf///3//f46BAAD/f/9/b35+P1M+IMB9XwAAwJxjgPR/ngD/f7F//n+VPv9/o3/pf34/q8HDPg1gR4z/f/9/AIAAevc4u8ukgX+CPi8cLcaATJb/f/9/AICcg2I0HjF4gWnB/3//fwCAnIOcy/GCb6cAegfHtnzdpX+CwNCNgXCp+If/f/9/AIB/fcDQcX5wqQZ4/3//fwCAf30+L+LSxoC3c/9//38AgP6FB8dIg92l/oX3OEM0pIGyaf9//38AgGJ8nMsNfW+nYnxiNODOeIGVPv9//38AgH4/q8Gr/QV/nYg++ub8/X0nkIL40/bxfWJ8nMtAzpwA/oUHx7vNcAN/fcDQ/9LyACK8vPt2xqx/3EO8+x3J/Xx/gsDQVtSgAgB6B8daNSEAnIOcyx/QwALfc8T4LPsofim/v8FD+Vh9Vmxw+bHybn7cQ7z7izh9fgAAUAn/f/5/AADYRf9//n/cQ0IEA4NFXP//UAn/f/5/Iry8+3PHfX4ivEIE+3xFXP//AfD/f/5/nYjABeb8/P1+P1M+q/0E/yeQfAfT9vH9YnxiNEDOm4D+hfc4u81vg399Pi//0vGAIrxCBHbGrP9/gj4vVtSfgtxDQgQdyf38AHr3OFo1IICcg2I0H9C/gt9zOgct+yf+VmyOBrHybf4pvz8+Q/lY/f//X/H/f/5///+fDv9//n///58O/3/+f///X/H/f/5///9f8f9//n///911AADu+v//3XUAAO76Kb8/Pln67f0h+/9//v9ugv7/ZZYAADKLacH/f/7/tOApv7/BWfoRgv//////fwAA//////9/AAD//wAA/38AAAAA////fwAAAAAAAP9/AAAAANhF///rYgAAyWf//xsM+PhIJqiSugj+5XcdyM+vM77i9BuezTAv+PhIJveM+QJI08UUndzqN0jTxRQD3dc4L39FfE6rCBf/f/9/fXtAAv9//3+yh9kDeH+TfS+rfRZpijdVIcqUK6SNU0s2wmIrQpX+M/HbpjFClf4zD+evMLdZBYeokkT3t1kFh/eMBf0KZECdns3O0IhiAJrIz0/MOWu1rJ3cFMg5a7WsA90nx/////+yhyX8/////317vv1E/C//Tqv26JL9d/8vq4HpxyqU9SHKatSrNFryNsKc1AFMvOrx21jOAUy86g/nT88=")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_l7r8m")

[sub_resource type="BoxShape3D" id="BoxShape3D_2a8xl"]
size = Vector3(0.241394, 0.136658, 0.218506)

[node name="Phone" type="StaticBody3D"]
script = ExtResource("1_vuj8m")

[node name="Phone_01" type="MeshInstance3D" parent="."]
transform = Transform3D(34.4913, 0, 0, 0, -1.50766e-06, 34.4913, 0, -34.4913, -1.50766e-06, 0, 0, 0)
mesh = SubResource("ArrayMesh_stj8f")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.009552, 0.00869751, 0.0394287)
shape = SubResource("BoxShape3D_2a8xl")

[node name="PhoneRing" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_v1u80")
volume_db = 5.0
pitch_scale = 0.55
bus = &"SFX"

[node name="PhoneVoice" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_bfmhd")
volume_db = 5.0
pitch_scale = 0.6
bus = &"SFX"

[node name="StartPhone" type="Timer" parent="."]

[connection signal="timeout" from="StartPhone" to="." method="_on_start_phone_timeout"]
